crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__closure-2.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
fn a():
  v := 0
  fn b():
    fn c():
      fn d():
        print v


# Func:
function <d>:
  frame_size: 4
  length: 6
  const: <empty>
  code:
    0 | load_capture slot=0
    2 | print 
    3 | push_none 
    4 | ret 
    5 | suspend 

function <c>:
  frame_size: 5
  length: 10
  const (length=1):
    0: <closure descriptor d n=1>
  code:
     0 | create_closure [0]
     2 | capture_slot parent_slot=0, self_slot=0
     5 | store_reg r4
     7 | push_none 
     8 | ret 
     9 | suspend 

function <b>:
  frame_size: 5
  length: 10
  const (length=1):
    0: <closure descriptor c n=1>
  code:
     0 | create_closure [0]
     2 | capture_slot parent_slot=0, self_slot=0
     5 | store_reg r4
     7 | push_none 
     8 | ret 
     9 | suspend 

function <a>:
  frame_size: 6
  length: 17
  const (length=1):
    0: <closure descriptor b n=1>
  code:
     0 | push_small_int value=0
     5 | store_reg r4
     7 | create_closure [0]
     9 | capture_reg r4, slot=0
    12 | store_reg r5
    14 | push_none 
    15 | ret 
    16 | suspend 

function <[[main]]>:
  frame_size: 0
  length: 6
  const (length=2):
    0: <func a>
    1: "a"
  code:
    0 | load_const [0]
    2 | store_global [1]
    4 | ret 
    5 | suspend 

