crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__func-2.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
fn test(a):
  print a

test(0)


# Func:
function <test>:
  frame_size: 5
  length: 6
  const: <empty>
  code:
    0 | load_reg r4
    2 | print 
    3 | push_none 
    4 | ret 
    5 | suspend 

function <[[main]]>:
  frame_size: 2
  length: 20
  const (length=2):
    0: <func test>
    1: "test"
  code:
     0 | load_const [0]
     2 | store_global [1]
     4 | load_global [1]
     6 | store_reg r0
     8 | push_small_int value=0
    13 | store_reg r1
    15 | call r0, args=1
    18 | ret 
    19 | suspend 

