crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__func-3.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
fn test(a, b=10):
  print a, b

test(1)
test(1, 2)


# Func:
function <test>:
  frame_size: 7
  length: 31
  const: <empty>
  code:
     0 | is_pos_param_not_set index=1
     2 | jump_if_false offset=13
     4 | nop 
     5 | nop 
     6 | nop 
     7 | nop 
     8 | push_small_int value=10
    13 | store_reg r5
    15 | create_empty_list 
    16 | store_reg r6
    18 | load_reg r4
    20 | push_to_list r6
    22 | load_reg r5
    24 | push_to_list r6
    26 | print_list r6
    28 | push_none 
    29 | ret 
    30 | suspend 

function <[[main]]>:
  frame_size: 3
  length: 41
  const (length=2):
    0: <func test>
    1: "test"
  code:
     0 | load_const [0]
     2 | store_global [1]
     4 | load_global [1]
     6 | store_reg r0
     8 | push_small_int value=1
    13 | store_reg r1
    15 | call r0, args=1
    18 | load_global [1]
    20 | store_reg r0
    22 | push_small_int value=1
    27 | store_reg r1
    29 | push_small_int value=2
    34 | store_reg r2
    36 | call r0, args=2
    39 | ret 
    40 | suspend 

