crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__func-5.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
fn test(a, *, b=10):
  print a, b

test(1)
test(1, b=2)


# Chunk:
function <test>:
  frame_size: 6
  length: 34
  const (length=1):
    0: "b"
  code:
     0 | is_kw_param_not_set [0]
     2 | jump_if_false offset=13
     4 | nop 
     5 | nop 
     6 | nop 
     7 | nop 
     8 | push_small_int value=10
    13 | store_reg r5
    15 | load_kw_param [0], r5
    18 | create_empty_list 
    19 | store_reg r0
    21 | load_reg r4
    23 | push_to_list r0
    25 | load_reg r5
    27 | push_to_list r0
    29 | print_list r0
    31 | push_none 
    32 | ret 
    33 | suspend 

function <[[main]]>:
  frame_size: 3
  length: 45
  const (length=3):
    0: <func test>
    1: "test"
    2: "b"
  code:
     0 | load_const [0]
     2 | store_global [1]
     4 | load_global [1]
     6 | store_reg r0
     8 | push_small_int value=1
    13 | store_reg r1
    15 | call r0, args=1
    18 | load_global [1]
    20 | store_reg r0
    22 | create_empty_dict 
    23 | store_reg r1
    25 | push_small_int value=1
    30 | store_reg r2
    32 | push_small_int value=2
    37 | insert_to_dict_keyed [2], r1
    40 | call_kw r0, args=1
    43 | ret 
    44 | suspend 

