crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__func-6.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
fn test(a, *v, b=10, **kw):
  print a, v, b, kw

test(1, 2)
test(1, 2, b=3, c=4)


# Chunk:
function <test>:
  frame_size: 6
  length: 41
  const (length=1):
    0: "b"
  code:
     0 | is_kw_param_not_set [0]
     2 | jump_if_false offset=13
     4 | nop 
     5 | nop 
     6 | nop 
     7 | nop 
     8 | push_small_int value=10
    13 | store_reg r5
    15 | load_kw_param [0], r5
    18 | create_empty_list 
    19 | store_reg r6
    21 | load_reg r4
    23 | push_to_list r6
    25 | load_reg r2
    27 | push_to_list r6
    29 | load_reg r5
    31 | push_to_list r6
    33 | load_reg r3
    35 | push_to_list r6
    37 | print_list r6
    39 | ret 
    40 | suspend 

function <[[main]]>:
  frame_size: 4
  length: 67
  const (length=4):
    0: <func test>
    1: "test"
    2: "b"
    3: "c"
  code:
     0 | load_const [0]
     2 | store_global [1]
     4 | load_global [1]
     6 | store_reg r0
     8 | push_small_int value=1
    13 | store_reg r1
    15 | push_small_int value=2
    20 | store_reg r2
    22 | call r0, args=2
    25 | load_global [1]
    27 | store_reg r0
    29 | create_empty_dict 
    30 | store_reg r1
    32 | push_small_int value=1
    37 | store_reg r2
    39 | push_small_int value=2
    44 | store_reg r3
    46 | push_small_int value=3
    51 | insert_to_dict_keyed [2], r1
    54 | push_small_int value=4
    59 | insert_to_dict_keyed [3], r1
    62 | call_kw r0, args=2
    65 | ret 
    66 | suspend 

