crates/emit/src/emitter/snapshots/mu_emit__emitter__tests__func.snap
---
source: crates/emit/src/emitter/tests.rs
expression: snapshot
---
# Input:
fn test():
  pass

test()


# Func:
function <test>:
  frame_size: 3
  length: 3
  const: <empty>
  code:
    0 | push_none 
    1 | ret 
    2 | suspend 

function <[[main]]>:
  frame_size: 4
  length: 9
  const (length=2):
    0: <func test>
    1: "test"
  code:
    0 | load_const [0]
    2 | store_global [1]
    4 | load_global [1]
    6 | call0 
    7 | ret 
    8 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
